--- a/toDo.css
+++ b/toDo.css
@@ -1,3 +1,27 @@
 body {
-    background-color: blueviolet;
+    background-color: #edeea7;
+    width: 600px;
+    margin: 0 auto;
+    padding: 0;
+}
+
+.list {
+    color: #555;
+    font-size: 22px;
+    margin-left: 10px;
+    font-family: 'Courier New', Courier, monospace;
+    border: 1px solid #dedede;
+}
+.list li {
+    border-bottom: 1px dotted #ccc;
+    height: auto;
+    padding: 8px;
+}
+.red-ruler {
+    border-left: 1px solid #ffaa9f;
+    border-right: 1px solid #ffaa9f;
+    width: 2px;
+    float: left;
+    height: 800px;
+    margin-left: 40px;
 }
