--- a/toDo.css
+++ b/toDo.css
@@ -1,19 +1,26 @@
 body {
-    background-color: #edeea7;
+    background-color: #d5d5d5;
     width: 600px;
     margin: 0 auto;
     padding: 0;
 }
-
+h1 {
+    height: auto;
+    padding: 15px;
+    margin-bottom: 0;
+    margin-left: 40px;
+}
+#container {
+    background-color: rgb(225, 219, 141);
+}
 .list {
     color: #555;
     font-size: 22px;
-    margin-left: 10px;
     font-family: 'Courier New', Courier, monospace;
-    border: 1px solid #dedede;
+    border: 0px 1px 1px 1px solid #aeb1d1;
 }
 .list li {
-    border-bottom: 1px dotted #ccc;
+    border-top: 1px dotted #aeb1d1;
     height: auto;
     padding: 8px;
 }
