--- a/toDo.css
+++ b/toDo.css
@@ -3,6 +3,7 @@ body {
     width: 600px;
     margin: 0 auto;
     padding: 0;
+    font-size: 28px;
 }
 h1 {
     height: auto;
@@ -13,8 +14,10 @@ h1 {
 #container {
     background-color: rgb(225, 219, 141);
 }
+li {
+    color: rgb(39, 39, 39);
+}
 .list {
-    color: #555;
     font-size: 22px;
     font-family: 'Courier New', Courier, monospace;
     border: 0px 1px 1px 1px solid #aeb1d1;
