--- a/toDo.css
+++ b/toDo.css
@@ -1,6 +1,8 @@
-
+body, html {
+    height: 100%;
+}
 body {
-    background-color: #d5d5d5;
+    background-color: rgb(233, 235, 148);
     margin: 0 auto;
     padding: 0;
     font-size: 18px;
@@ -9,34 +11,40 @@ h1 {
     height: auto;
     padding: 15px;
     margin-bottom: 0;
+    margin-top: 0;
     margin-left: 10%;
 }
 #container {
-    background-color: rgb(225, 219, 141);
+    background-color: rgb(233, 235, 148);
     height: 100%;
+}
+input {
+    margin-left: 10px;
+}
+ol {
+    letter-spacing: 1px;
+    font-weight: 600;
 }
 li {
     color: rgb(39, 39, 39);
-}
-.list {
-    font-size: 22px;
-    font-family: 'Courier New', Courier, monospace;
-    border: 0px 1px 1px 1px solid #aeb1d1;
-}
-.list li {
     border-top: 1px dotted #aeb1d1;
     height: auto;
-    padding: 8px;
+    padding: 4px;
 }
+.list {
+    font-size: 24px;
+    font-family: 'Caveat', cursive;
+}
+
 .red-ruler {
     border-left: 1px solid #ffaa9f;
     border-right: 1px solid #ffaa9f;
     width: 2px;
     float: left;
-    height: 800px;
+    height: 100%;
     margin-left: 10%;
 }
 .done {
-    color: rgb(39, 39 39);
+    color: rgb(150, 150, 150);
     text-decoration: line-through;
 }
