--- a/toDo.css
+++ b/toDo.css
@@ -20,10 +20,27 @@ h1 {
 }
 input {
     margin-left: 10px;
+    background-color: rgb(254, 255, 187);
+    height: 20px;
 }
 ol {
     letter-spacing: 1px;
     font-weight: 600;
+}
+span {
+    background-color: rgb(133, 1, 1);
+    color: white;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 4px;
+    text-align: center;
+    width: 0;
+    opacity: 0;
+    transition: 0.4s linear;
+}
+li:hover span {
+    width: 40px;
+    opacity: 100;
 }
 li {
     color: rgb(39, 39, 39);
